@@ -30,6 +30,6 @@ locale	firegpg	fa	locale/fa/
 locale	firegpg	ja	locale/ja/
 locale	firegpg	da	locale/da/
 skin	firegpg	classic/1.0	skin/
-overlay	chrome://browser/content/browser.xul	chrome://firegpg/content/firefoxOverlay.xul
-overlay	chrome://webrunner/content/webrunner.xul	chrome://firegpg/content/prismeOverlay.xul
+overlay	chrome://browser/content/browser.xul	chrome://firegpg/content/Core/firefoxOverlay.xul
+overlay	chrome://webrunner/content/webrunner.xul	chrome://firegpg/content/Core/prismeOverlay.xul
 style	chrome://global/content/customizeToolbar.xul	chrome://firegpg/skin/overlay.css
