@@ -48,7 +48,7 @@
   <script src="../GpgAuth/gpgauth.js"/>
   <script src="../Api/api.js"/>
   <script src="./Api/new_api.js"/>
-  <script src="keyring.js"/>
+  <script src="inline.js"/>
   <script src="../Mime/mime.js" />
   <stringbundleset id="stringbundleset">
     <stringbundle id="firegpg-strings" src="chrome://firegpg/locale/firegpg.properties"/>
