@@ -1,3 +1,8 @@
+2009-01-31 Maximilien Cuony
+    * Keyring -> inline (FireGPGInline)
+    * Reorganisation of FireGPG structure in progress.
+    * Fixed the about windows
+
 2009-01-26 Maximilien Cuony
     * Fix a problem with form value, thanks to 	Mateusz Baszczyk for his help
 
